# Status-Check

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  supabase_schema.sql
.github/workflows/: build.yml
include/: debug_log.h  hotkey_manager.h  hud_window.h  member_status.h  plugin.h  settings_dialog.h  status_manager.h  supabase_client.h
packaging/: package.ini
resources/: resources.qrc
src/: hotkey_manager.cpp  hud_window.cpp  plugin.cpp  settings_dialog.cpp  status_manager.cpp  supabase_client.cpp
ts3_sdk/include/: plugin_definitions.h
ts3_sdk/include/teamlog/: logtypes.h
ts3_sdk/include/teamspeak/: clientlib_publicdefinitions.h
